--- a/docker-test/Dockerfile
+++ b/docker-test/Dockerfile
@@ -6,11 +6,11 @@ EXPOSE 80
 EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
-#WORKDIR /src
-COPY ["docker-test.csproj", "docker-test/"]
+WORKDIR /src
+COPY ["docker-test/docker-test/docker-test.csproj", "docker-test/"]
 RUN dotnet restore "docker-test/docker-test.csproj"
 COPY . .
-#WORKDIR "/src/docker-test"
+WORKDIR "/src/docker-test"
 RUN dotnet build "docker-test.csproj" -c Release -o /app/build
 
 FROM build AS publish
@@ -19,4 +19,4 @@ RUN dotnet publish "docker-test.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "docker-test.dll"]
+ENTRYPOINT ["dotnet", "docker-test.dll"] 
