--- a/docker-test/Dockerfile
+++ b/docker-test/Dockerfile
@@ -1,17 +1,16 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 FROM mcr.microsoft.com/dotnet/aspnet:3.1 AS base
-{"log":"Hello from Docker!\n"}
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
-WORKDIR /src
+WORKDIR /docker-test
 COPY ["docker-test/docker-test.csproj", "docker-test/"]
 RUN dotnet restore "docker-test/docker-test.csproj"
 COPY . .
-WORKDIR "/src/docker-test"
+WORKDIR "/docker-test"
 RUN dotnet build "docker-test.csproj" -c Release -o /app/build
 
 FROM build AS publish
